more Visual Studio vcxproj tweaking

--- a/sys/windows/vs/dirs.props
+++ b/sys/windows/vs/dirs.props
@@ -31,6 +31,7 @@
     <LuaDir>$(LibDir)lua-$(LUA_VERSION)\src\</LuaDir>
     <SftagsDir>$(RootDir)\sys\windows\vs\sftags\</SftagsDir>
     <SfctoolDir>$(RootDir)\sys\windows\vs\sfctool\</SfctoolDir>
+    <PackageBin>$(RootDir)binary\$(Configuration)\$(Platform)</PackageBin>
   </PropertyGroup>
   <PropertyGroup Condition="'$(PDCURSESMOD)'=='' AND Exists('$(LibDir)pdcursesmod\curses.h')">
     <PDCURSESMOD>$(LibDir)pdcursesmod\</PDCURSESMOD>
