a follow-up bit
package up debug symbols for sfctool if SFCTOOL=1

--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -2789,7 +2789,7 @@ FILESTOZIP = $(BinDir)nethackrc.template $(BinDir)Guidebook.txt $(BinDir)license
 	$(BinDir)opthelp $(BinDir)nhdat370 $(BinDir)record \
 	$(BinDir)symbols $(BinDir)sysconf.template $(SFCTOOLPKG)
 
-DBGSYMS = NetHack.PDB NetHackW.PDB $(SFCTOOLPDB)
+DBGSYMS = NetHack.PDB NetHackW.PDB $(SFCTOOLPDBNAM)
 PDBTOZIP = $(BinDir)NetHack.PDB $(BinDir)NetHackW.PDB $(SFCTOOLPDBBIN)
 MAINZIP = $(PkgDir)nethack-$(NHV)-win-$(TARGET_CPU).zip
 DBGSYMZIP = $(PkgDir)nethack-$(NHV)-win-$(TARGET_CPU)-debugsymbols.zip
