--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -659,6 +659,7 @@ HACKCSRC = \
 	$(SRC)drawing.c  $(SRC)dungeon.c $(SRC)eat.c      $(SRC)end.c \
 	$(SRC)engrave.c  $(SRC)exper.c   $(SRC)explode.c  $(SRC)files.c \
 	$(SRC)fountain.c $(SRC)getpos.c  $(SRC)glyphs.c   $(SRC)hack.c \
+	$(SRC)iactions.c \
 	$(SRC)insight.c  $(SRC)invent.c  $(SRC)isaac64.c  $(SRC)light.c \
 	$(SRC)lock.c     $(SRC)mail.c    $(SRC)makemon.c  $(SRC)mcastu.c \
 	$(SRC)mdlib.c    $(SRC)mhitm.c   $(SRC)mhitu.c    $(SRC)minion.c \
@@ -862,6 +863,7 @@ COREOBJTTY = \
 	$(OTTY)drawing.o  $(OTTY)dungeon.o  $(OTTY)eat.o      $(OTTY)end.o \
 	$(OTTY)engrave.o  $(OTTY)exper.o    $(OTTY)explode.o  $(OTTY)extralev.o \
 	$(OTTY)files.o    $(OTTY)fountain.o $(OTTY)getpos.o   $(OTTY)glyphs.o \
+	$(OTTY)iactions.o \
 	$(OTTY)hack.o     $(OTTY)insight.o  $(OTTY)invent.o   $(OTTY)isaac64.o \
 	$(OTTY)light.o    $(OTTY)lock.o     $(OTTY)mail.o     $(OTTY)makemon.o \
 	$(OTTY)mcastu.o   $(OTTY)mhitm.o    $(OTTY)mhitu.o    $(OTTY)minion.o \
@@ -925,6 +927,7 @@ COREOBJGUI = \
 	$(OGUI)drawing.o  $(OGUI)dungeon.o  $(OGUI)eat.o      $(OGUI)end.o \
 	$(OGUI)engrave.o  $(OGUI)exper.o    $(OGUI)explode.o  $(OGUI)extralev.o \
 	$(OGUI)files.o    $(OGUI)fountain.o $(OGUI)getpos.o   $(OGUI)glyphs.o \
+	$(OGUI)iactions.o \
 	$(OGUI)hack.o     $(OGUI)insight.o  $(OGUI)invent.o   $(OGUI)isaac64.o \
 	$(OGUI)light.o    $(OGUI)lock.o     $(OGUI)mail.o     $(OGUI)makemon.o \
 	$(OGUI)mcastu.o   $(OGUI)mhitm.o    $(OGUI)mhitu.o    $(OGUI)minion.o \
@@ -3257,6 +3260,7 @@ $(OTTY)getpos.o: getpos.c $(HACK_H)
 $(OTTY)glyphs.o: glyphs.c $(HACK_H)
 $(OTTY)hack.o: hack.c $(HACK_H)
 $(OTTY)hacklib.o: hacklib.c $(HACK_H)
+$(OTTY)iactions.o: iactions.c $(HACK_H)
 $(OTTY)insight.o: insight.c $(HACK_H)
 $(OTTY)invent.o: invent.c $(HACK_H)
 $(OTTY)isaac64.o: isaac64.c $(CONFIG_H) $(INCL)isaac64.h
@@ -3636,6 +3640,7 @@ $(OGUI)getpos.o: getpos.c $(HACK_H)
 $(OGUI)glyphs.o: glyphs.c $(HACK_H)
 $(OGUI)hack.o: hack.c $(HACK_H)
 $(OGUI)hacklib.o: hacklib.c $(HACK_H)
+$(OGUI)iactions.o: iactions.c $(HACK_H)
 $(OGUI)insight.o: insight.c $(HACK_H)
 $(OGUI)invent.o: invent.c $(HACK_H)
 $(OGUI)isaac64.o: isaac64.c $(CONFIG_H) $(INCL)isaac64.h
